--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,7 +17,7 @@ pipeline {
                 echo 'Deploying....'
             }
         }
-        stage {
+        stage ('viswa-devops'){
             steps {
                 echo "viswanath you are the next devops engineer in couple of days be ready"
             }
