--- a/JenkinsFile
+++ b/JenkinsFile
@@ -24,7 +24,7 @@ pipeline {
         }
         stage('viswa-devops1') {
             steps {
-                echo "viswanath you are the next devops engineer in couple of days be ready hero"
+                echo "viswanath you are the next devops engineer in couple of days be ready herodfgth"
             }
         }
     }
