--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo 'Building..viswa'
+                echo 'Building..viswaa'
             }
         }
         stage('Test') {
