--- a/JenkinsFile
+++ b/JenkinsFile
@@ -35,9 +35,11 @@ pipeline {
             }
         }
         stage('shell scripting'){
-            sh '''
-                echo 'its running under shell build stage'
-            '''
+            steps{
+                sh '''
+                    echo 'its running under shell build stage'
+                '''
+            }
         }
     }
     // Post Bunoild
@@ -53,6 +55,5 @@ pipeline {
         success{
             echo 'i will give output when build pipeline success'
         }
-
-        }
+    }
 }
