--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
         GREETING = 'Hello viswanath you are very good'
     }
     options{
-        timeout(time: 1, unit: 'SECONDS')
+        timeout(time: 1, unit: 'HOURS')
     }
     // Build
     stages {
