--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,6 +9,7 @@ pipeline {
     }
     options{
         timeout(time: 1, unit: 'HOURS')
+        disableConcurrentBuilds()
     }
     // Build
     stages {
