--- a/JenkinsFile
+++ b/JenkinsFile
@@ -58,6 +58,21 @@ pipeline {
                 '''
             }
         }
+        stage ('parameter-checks') {
+            steps {
+                sh '''
+                    echo "Hello ${params.PERSON}"
+
+                    echo "Biography: ${params.BIOGRAPHY}"
+
+                    echo "Toggle: ${params.TOGGLE}"
+
+                    echo "Choice: ${params.CHOICE}"
+
+                    echo "Password: ${params.PASSWORD}"
+                '''
+            }
+        }
     }
     // Post Bunoild
     post{
