--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,7 +13,7 @@ pipeline {
 
         choice(name: 'CHOICE', choices: ['One', 'Two', 'Three'], description: 'Pick something')
 
-        password(name: 'PASSWORD', defaultValue: 'SECRET', description: 'Enter a password')
+        //password(name: 'PASSWORD', defaultValue: 'SECRET', description: 'Enter a password')
     }
     environment{
         GREETING = 'Hello viswanath you are very good'
@@ -60,7 +60,7 @@ pipeline {
         }
         stage ('parameter-checks') {
             steps {
-                echo "Hello ${params.PERSON}"
+                echo "Hello ${params.PERSON} ${params.PERSON}"
 
                 echo "Biography: ${params.BIOGRAPHY}"
 
