--- a/JenkinsFile
+++ b/JenkinsFile
@@ -68,7 +68,7 @@ pipeline {
 
                 echo "Choice: ${params.CHOICE}"
 
-                echo "Password: ${params.PASSWORD}"
+                //echo "Password: ${params.PASSWORD}"
             }
         }
     }
