terraform-jenkins-test

--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
-    agent {
-        node {
-            label 'AGENT-1'
-        }
-    }
+    // agent {
+    //     node {
+    //         label 'AGENT-1'
+    //     }
+    // }
     options {
         ansiColor('xterm')
         // timeout(time: 1, unit: 'HOURS')
