terraform-jenkins-test

--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
             steps {
                 sh """
                     cd 01-vpc
-                    terraform apply -auto-approve
+                    terraform apply
                 """
             }
         }
