--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -49,6 +49,14 @@ pipeline {
                     cd 01-vpc
                     terraform apply
                 """
+                input {
+                    message "click yes or abort?"
+                    ok "Yes, we should."
+                    // submitter "alice,bob"
+                    // parameters {
+                    //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                    // }
+                }
             }
         }
         stage('Destroy') {
