--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -47,15 +47,15 @@ pipeline {
             steps {
                 sh """
                     cd 01-vpc
-                    terraform apply
+                    terraform apply --auto-approve
                 """
-                input {
-                    message "click yes or abort?"
-                    ok "Yes, we should."
-                    // submitter "alice,bob"
-                    // parameters {
-                    //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                    // }
+                // input {
+                //     message "click yes or abort?"
+                //     ok "Yes, we should."
+                //     // submitter "alice,bob"
+                //     // parameters {
+                //     //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                //     // }
                 }
             }
         }
