--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -69,7 +69,7 @@ pipeline {
             steps {
                 sh """
                     cd 01-vpc
-                    terraform destroy -auto-approve
+                    terraform destroy --auto-approve
                 """
             }
         }
