--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -1,16 +1,16 @@
 pipeline {
-    agent any
-    //     node {
-    //         label 'AGENT-1'
-    //     }
-    // }
+    agent {
+        node {
+            label 'AGENT-1'
+        }
+    }
     options {
         ansiColor('xterm')
         // timeout(time: 1, unit: 'HOURS')
         // disableConcurrentBuilds()
     }
     parameters {
-        choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick ssomething')
+        choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick something')
     }
     // build
     stages {
@@ -47,9 +47,8 @@ pipeline {
             steps {
                 sh """
                     cd 01-vpc
-                    terraform apply --auto-approve
+                    terraform apply -auto-approve
                 """
-                }
             }
         }
         stage('Destroy') {
@@ -69,7 +68,7 @@ pipeline {
             steps {
                 sh """
                     cd 01-vpc
-                    terraform destroy --auto-approve
+                    terraform destroy -auto-approve
                 """
             }
         }
@@ -86,3 +85,4 @@ pipeline {
             echo 'I will say Hello when pipeline is success'
         }
     }
+}
